test: modernize test suite to JUnit 5 best practices (#1794)
* Tests "public" pass

* Apply spotless again

* Fixed teardown, fixed sixel test & applied few nits

* Add setup & teardown overrides

* Fix test corrupting System.in by closing it.

* Workaround for test hang on MACOS.