@@ -17,12 +17,12 @@ import static org.junit.jupiter.api.Assertions.*;
 /**
  * Tests for the SortComparator class functionality.
  */
-public class SortComparatorTest {
+class SortComparatorTest {
 
     @Test
     void testBasicSorting() {
         PosixCommands.SortComparator comparator =
-                new PosixCommands.SortComparator(false, false, false, false, '\0', Arrays.asList("1"));
+                new PosixCommands.SortComparator(false, false, false, false, '\0', List.of("1"));
 
         List<String> lines = Arrays.asList("zebra", "apple", "banana");
         lines.sort(comparator);
@@ -33,7 +33,7 @@ public class SortComparatorTest {
     @Test
     void testCaseInsensitiveSorting() {
         PosixCommands.SortComparator comparator =
-                new PosixCommands.SortComparator(true, false, false, false, '\0', Arrays.asList("1"));
+                new PosixCommands.SortComparator(true, false, false, false, '\0', List.of("1"));
 
         List<String> lines = Arrays.asList("Zebra", "apple", "Banana");
         lines.sort(comparator);
@@ -44,7 +44,7 @@ public class SortComparatorTest {
     @Test
     void testReverseSorting() {
         PosixCommands.SortComparator comparator =
-                new PosixCommands.SortComparator(false, true, false, false, '\0', Arrays.asList("1"));
+                new PosixCommands.SortComparator(false, true, false, false, '\0', List.of("1"));
 
         List<String> lines = Arrays.asList("apple", "banana", "zebra");
         lines.sort(comparator);
@@ -55,7 +55,7 @@ public class SortComparatorTest {
     @Test
     void testNumericSorting() {
         PosixCommands.SortComparator comparator =
-                new PosixCommands.SortComparator(false, false, false, true, '\0', Arrays.asList("1"));
+                new PosixCommands.SortComparator(false, false, false, true, '\0', List.of("1"));
 
         List<String> lines = Arrays.asList("10", "2", "100", "1");
         lines.sort(comparator);
@@ -66,7 +66,7 @@ public class SortComparatorTest {
     @Test
     void testIgnoreLeadingBlanks() {
         PosixCommands.SortComparator comparator =
-                new PosixCommands.SortComparator(false, false, true, false, '\0', Arrays.asList("1"));
+                new PosixCommands.SortComparator(false, false, true, false, '\0', List.of("1"));
 
         List<String> lines = Arrays.asList("  zebra", " apple", "banana");
         lines.sort(comparator);
@@ -77,7 +77,7 @@ public class SortComparatorTest {
     @Test
     void testFieldSeparator() {
         PosixCommands.SortComparator comparator =
-                new PosixCommands.SortComparator(false, false, false, false, ':', Arrays.asList("2"));
+                new PosixCommands.SortComparator(false, false, false, false, ':', List.of("2"));
 
         List<String> lines = Arrays.asList("a:zebra", "b:apple", "c:banana");
         lines.sort(comparator);
@@ -88,7 +88,7 @@ public class SortComparatorTest {
     @Test
     void testMultipleKeys() {
         PosixCommands.SortComparator comparator =
-                new PosixCommands.SortComparator(false, false, false, false, ':', Arrays.asList("1", "2"));
+                new PosixCommands.SortComparator(false, false, false, false, ':', List.of("1", "2"));
 
         List<String> lines = Arrays.asList("b:zebra", "a:apple", "b:apple", "a:zebra");
         lines.sort(comparator);
@@ -100,7 +100,7 @@ public class SortComparatorTest {
     void testKeyWithModifiers() {
         // Test key with numeric modifier - use only numeric values
         PosixCommands.SortComparator comparator =
-                new PosixCommands.SortComparator(false, false, false, false, ':', Arrays.asList("2n"));
+                new PosixCommands.SortComparator(false, false, false, false, ':', List.of("2n"));
 
         List<String> lines = Arrays.asList("x:10", "y:2", "z:100", "w:1");
         lines.sort(comparator);
@@ -111,7 +111,7 @@ public class SortComparatorTest {
     @Test
     void testKeyWithReverseModifier() {
         PosixCommands.SortComparator comparator =
-                new PosixCommands.SortComparator(false, false, false, false, ':', Arrays.asList("2r"));
+                new PosixCommands.SortComparator(false, false, false, false, ':', List.of("2r"));
 
         List<String> lines = Arrays.asList("a:apple", "b:zebra", "c:banana");
         lines.sort(comparator);
@@ -122,7 +122,7 @@ public class SortComparatorTest {
     @Test
     void testKeyWithCaseInsensitiveModifier() {
         PosixCommands.SortComparator comparator =
-                new PosixCommands.SortComparator(false, false, false, false, ':', Arrays.asList("2f"));
+                new PosixCommands.SortComparator(false, false, false, false, ':', List.of("2f"));
 
         List<String> lines = Arrays.asList("a:Zebra", "b:apple", "c:Banana");
         lines.sort(comparator);
@@ -133,7 +133,7 @@ public class SortComparatorTest {
     @Test
     void testKeyWithIgnoreBlanksModifier() {
         PosixCommands.SortComparator comparator =
-                new PosixCommands.SortComparator(false, false, false, false, ':', Arrays.asList("2b"));
+                new PosixCommands.SortComparator(false, false, false, false, ':', List.of("2b"));
 
         List<String> lines = Arrays.asList("a:  zebra", "b: apple", "c:banana");
         lines.sort(comparator);
@@ -145,7 +145,7 @@ public class SortComparatorTest {
     void testComplexKey() {
         // Test key with field range and multiple modifiers - use only numeric values
         PosixCommands.SortComparator comparator =
-                new PosixCommands.SortComparator(false, false, false, false, ':', Arrays.asList("2,3nr"));
+                new PosixCommands.SortComparator(false, false, false, false, ':', List.of("2,3nr"));
 
         List<String> lines = Arrays.asList("x:10:5", "y:2:8", "z:100:3");
         lines.sort(comparator);
@@ -156,7 +156,7 @@ public class SortComparatorTest {
     @Test
     void testFloatingPointNumbers() {
         PosixCommands.SortComparator comparator =
-                new PosixCommands.SortComparator(false, false, false, true, '\0', Arrays.asList("1"));
+                new PosixCommands.SortComparator(false, false, false, true, '\0', List.of("1"));
 
         List<String> lines = Arrays.asList("3.14", "2.71", "1.41", "10.5");
         lines.sort(comparator);
@@ -167,7 +167,7 @@ public class SortComparatorTest {
     @Test
     void testScientificNotation() {
         PosixCommands.SortComparator comparator =
-                new PosixCommands.SortComparator(false, false, false, true, '\0', Arrays.asList("1"));
+                new PosixCommands.SortComparator(false, false, false, true, '\0', List.of("1"));
 
         List<String> lines = Arrays.asList("1e3", "2e2", "3e1", "1e4");
         lines.sort(comparator);
@@ -178,7 +178,7 @@ public class SortComparatorTest {
     @Test
     void testNegativeNumbers() {
         PosixCommands.SortComparator comparator =
-                new PosixCommands.SortComparator(false, false, false, true, '\0', Arrays.asList("1"));
+                new PosixCommands.SortComparator(false, false, false, true, '\0', List.of("1"));
 
         List<String> lines = Arrays.asList("-10", "5", "-2", "0");
         lines.sort(comparator);
@@ -189,7 +189,7 @@ public class SortComparatorTest {
     @Test
     void testMixedContent() {
         PosixCommands.SortComparator comparator =
-                new PosixCommands.SortComparator(false, false, false, false, '\0', Arrays.asList("1"));
+                new PosixCommands.SortComparator(false, false, false, false, '\0', List.of("1"));
 
         List<String> lines = Arrays.asList("file10.txt", "file2.txt", "file1.txt", "file20.txt");
         lines.sort(comparator);
@@ -201,7 +201,7 @@ public class SortComparatorTest {
     @Test
     void testEmptyLines() {
         PosixCommands.SortComparator comparator =
-                new PosixCommands.SortComparator(false, false, false, false, '\0', Arrays.asList("1"));
+                new PosixCommands.SortComparator(false, false, false, false, '\0', List.of("1"));
 
         List<String> lines = Arrays.asList("", "apple", "", "banana");
         lines.sort(comparator);
@@ -212,7 +212,7 @@ public class SortComparatorTest {
     @Test
     void testWhitespaceHandling() {
         PosixCommands.SortComparator comparator =
-                new PosixCommands.SortComparator(false, false, false, false, '\0', Arrays.asList("2"));
+                new PosixCommands.SortComparator(false, false, false, false, '\0', List.of("2"));
 
         List<String> lines = Arrays.asList("a zebra", "b apple", "c banana");
         lines.sort(comparator);
@@ -223,7 +223,7 @@ public class SortComparatorTest {
     @Test
     void testTabSeparatedFields() {
         PosixCommands.SortComparator comparator =
-                new PosixCommands.SortComparator(false, false, false, false, '\t', Arrays.asList("2"));
+                new PosixCommands.SortComparator(false, false, false, false, '\t', List.of("2"));
 
         List<String> lines = Arrays.asList("a\tzebra", "b\tapple", "c\tbanana");
         lines.sort(comparator);
