@@ -8,14 +8,13 @@
  */
 package org.jline.reader.completer;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import org.jline.reader.EOFError;
 import org.jline.reader.ParsedLine;
 import org.jline.reader.Parser.ParseContext;
 import org.jline.reader.impl.DefaultParser;
-import org.jline.reader.impl.ReaderTestSupport;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -27,7 +26,7 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
  *
  * @author <a href="mailto:mdrob@apache.org">Mike Drob</a>
  */
-public class DefaultParserTest extends ReaderTestSupport {
+class DefaultParserTest {
 
     ParsedLine delimited;
     DefaultParser parser;
@@ -38,124 +37,124 @@ public class DefaultParserTest extends ReaderTestSupport {
     }
 
     @Test
-    public void testDelimit() {
+    void testDelimit() {
         // These all passed before adding quoting and escaping
         delimited = parser.parse("1 2 3", 0);
-        assertEquals(Arrays.asList("1", "2", "3"), delimited.words());
+        assertEquals(List.of("1", "2", "3"), delimited.words());
 
         delimited = parser.parse("1  2  3", 0);
-        assertEquals(Arrays.asList("1", "2", "3"), delimited.words());
+        assertEquals(List.of("1", "2", "3"), delimited.words());
     }
 
     @Test
-    public void testQuotedDelimit() {
+    void testQuotedDelimit() {
         delimited = parser.parse("\"1 2\" 3", 0);
-        assertEquals(Arrays.asList("1 2", "3"), delimited.words());
+        assertEquals(List.of("1 2", "3"), delimited.words());
 
         delimited = parser.parse("'1 2' 3", 0);
-        assertEquals(Arrays.asList("1 2", "3"), delimited.words());
+        assertEquals(List.of("1 2", "3"), delimited.words());
 
         delimited = parser.parse("1 '2 3'", 0);
-        assertEquals(Arrays.asList("1", "2 3"), delimited.words());
+        assertEquals(List.of("1", "2 3"), delimited.words());
 
         delimited = parser.parse("0'1 2' 3", 0);
-        assertEquals(Arrays.asList("0'1 2'", "3"), delimited.words());
+        assertEquals(List.of("0'1 2'", "3"), delimited.words());
 
         delimited = parser.parse("'01 '2 3", 0);
-        assertEquals(Arrays.asList("01 2", "3"), delimited.words());
+        assertEquals(List.of("01 2", "3"), delimited.words());
     }
 
     @Test
-    public void testMixedQuotes() {
+    void testMixedQuotes() {
         delimited = parser.parse("\"1' '2\" 3", 0);
-        assertEquals(Arrays.asList("1' '2", "3"), delimited.words());
+        assertEquals(List.of("1' '2", "3"), delimited.words());
 
         delimited = parser.parse("'1\" 2' 3\"", 0);
-        assertEquals(Arrays.asList("1\" 2", "3\""), delimited.words());
+        assertEquals(List.of("1\" 2", "3\""), delimited.words());
     }
 
     @Test
-    public void testEscapedSpace() {
+    void testEscapedSpace() {
         delimited = parser.parse("1\\ 2 3", 0);
-        assertEquals(Arrays.asList("1 2", "3"), delimited.words());
+        assertEquals(List.of("1 2", "3"), delimited.words());
     }
 
     @Test
-    public void testEscapedQuotes() {
+    void testEscapedQuotes() {
         delimited = parser.parse("'1 \\'2' 3", 0);
-        assertEquals(Arrays.asList("1 '2", "3"), delimited.words());
+        assertEquals(List.of("1 '2", "3"), delimited.words());
 
         delimited = parser.parse("\\'1 '2' 3", 0);
-        assertEquals(Arrays.asList("'1", "2", "3"), delimited.words());
+        assertEquals(List.of("'1", "2", "3"), delimited.words());
 
         delimited = parser.parse("'1 '2\\' 3", 0);
-        assertEquals(Arrays.asList("1 2'", "3"), delimited.words());
+        assertEquals(List.of("1 2'", "3"), delimited.words());
     }
 
     @Test
-    public void testNullStartBlockCommentDelim() {
+    void testNullStartBlockCommentDelim() {
         assertThrows(IllegalArgumentException.class, () -> new DefaultParser.BlockCommentDelims(null, "*/"));
     }
 
     @Test
-    public void testNullEndBlockCommentsDelim() {
+    void testNullEndBlockCommentsDelim() {
         assertThrows(IllegalArgumentException.class, () -> new DefaultParser.BlockCommentDelims("/*", null));
     }
 
     @Test
-    public void testEqualBlockCommentsDelims() {
+    void testEqualBlockCommentsDelims() {
         assertThrows(IllegalArgumentException.class, () -> new DefaultParser.BlockCommentDelims("/*", "/*"));
     }
 
     @Test
-    public void testEmptyStartBlockCommentsDelims() {
+    void testEmptyStartBlockCommentsDelims() {
         assertThrows(IllegalArgumentException.class, () -> new DefaultParser.BlockCommentDelims("", "*/"));
     }
 
     @Test
-    public void testEmptyEndBlockCommentsDelims() {
+    void testEmptyEndBlockCommentsDelims() {
         assertThrows(IllegalArgumentException.class, () -> new DefaultParser.BlockCommentDelims("/*", ""));
     }
 
     @Test
-    public void testBashComments() {
+    void testBashComments() {
         parser.setLineCommentDelims(new String[] {"#"});
         delimited = parser.parse("1 2 # 3", 0);
-        assertEquals(Arrays.asList("1", "2"), delimited.words());
+        assertEquals(List.of("1", "2"), delimited.words());
 
         delimited = parser.parse("#\\'1 '2' 3", 0);
         assertEquals(Collections.emptyList(), delimited.words());
 
         delimited = parser.parse("'#'\\'1 '2' 3", 0);
-        assertEquals(Arrays.asList("#'1", "2", "3"), delimited.words());
+        assertEquals(List.of("#'1", "2", "3"), delimited.words());
 
         delimited = parser.parse("#1 " + System.lineSeparator() + " '2' 3", 0);
-        assertEquals(Arrays.asList("2", "3"), delimited.words());
+        assertEquals(List.of("2", "3"), delimited.words());
     }
 
     @Test
-    public void testJavaComments() {
+    void testJavaComments() {
         parser.setLineCommentDelims(new String[] {"//"});
         parser.setBlockCommentDelims(new DefaultParser.BlockCommentDelims("/*", "*/"));
 
         delimited = parser.parse("1 2 # 3", 0);
-        assertEquals(Arrays.asList("1", "2", "#", "3"), delimited.words());
+        assertEquals(List.of("1", "2", "#", "3"), delimited.words());
 
         delimited = parser.parse("1 2 // 3", 0);
-        assertEquals(Arrays.asList("1", "2"), delimited.words());
+        assertEquals(List.of("1", "2"), delimited.words());
 
         delimited = parser.parse("/*\\'1 \n '2' \n3*/", 0);
         assertEquals(Collections.emptyList(), delimited.words());
 
         delimited = parser.parse("'//'\\'1 /*'2'\n */3", 0);
-        assertEquals(Arrays.asList("//'1", "3"), delimited.words());
+        assertEquals(List.of("//'1", "3"), delimited.words());
 
         delimited = parser.parse("hello/*comment*/world", 0);
-        assertEquals(Arrays.asList("hello", "world"), delimited.words());
+        assertEquals(List.of("hello", "world"), delimited.words());
     }
 
     @Test
-    public void testSqlComments() {
+    void testSqlComments() {
         // The test check sql line comment --
         // and sql block comments /* */
         parser.setLineCommentDelims(new String[] {"--"});
@@ -165,114 +164,114 @@ public class DefaultParserTest extends ReaderTestSupport {
         assertEquals(Collections.emptyList(), delimited.words());
 
         delimited = parser.parse("/**/g", 0);
-        assertEquals(Arrays.asList("g"), delimited.words());
+        assertEquals(List.of("g"), delimited.words());
 
         delimited = parser.parse("select '--';", 0);
-        assertEquals(Arrays.asList("select", "--;"), delimited.words());
+        assertEquals(List.of("select", "--;"), delimited.words());
         delimited = parser.parse("select --; '--';", 0);
-        assertEquals(Arrays.asList("select"), delimited.words());
+        assertEquals(List.of("select"), delimited.words());
 
         delimited = parser.parse("select 1/* 789*/ ; '--';", 0);
-        assertEquals(Arrays.asList("select", "1", ";", "--;"), delimited.words());
+        assertEquals(List.of("select", "1", ";", "--;"), delimited.words());
         delimited = parser.parse("select 1/* 789 \n */ ; '--';", 0);
-        assertEquals(Arrays.asList("select", "1", ";", "--;"), delimited.words());
+        assertEquals(List.of("select", "1", ";", "--;"), delimited.words());
 
         delimited = parser.parse("select 1/* 789 \n * / ; '--';*/", 0);
-        assertEquals(Arrays.asList("select", "1"), delimited.words());
+        assertEquals(List.of("select", "1"), delimited.words());
         delimited = parser.parse("select '1';--comment", 0);
-        assertEquals(Arrays.asList("select", "1;"), delimited.words());
+        assertEquals(List.of("select", "1;"), delimited.words());
 
         delimited = parser.parse("select '1';-----comment", 0);
-        assertEquals(Arrays.asList("select", "1;"), delimited.words());
+        assertEquals(List.of("select", "1;"), delimited.words());
 
         delimited = parser.parse("select '1';--comment\n", 0);
-        assertEquals(Arrays.asList("select", "1;"), delimited.words());
+        assertEquals(List.of("select", "1;"), delimited.words());
 
         delimited = parser.parse("select '1';--comment\n\n", 0);
-        assertEquals(Arrays.asList("select", "1;"), delimited.words());
+        assertEquals(List.of("select", "1;"), delimited.words());
 
         delimited = parser.parse("select '1'; --comment", 0);
-        assertEquals(Arrays.asList("select", "1;"), delimited.words());
+        assertEquals(List.of("select", "1;"), delimited.words());
 
         delimited = parser.parse("select '1';\n--comment", 0);
-        assertEquals(Arrays.asList("select", "1;"), delimited.words());
+        assertEquals(List.of("select", "1;"), delimited.words());
 
         delimited = parser.parse("select '1';\n\n--comment", 0);
-        assertEquals(Arrays.asList("select", "1;"), delimited.words());
+        assertEquals(List.of("select", "1;"), delimited.words());
 
         delimited = parser.parse("select '1';\n \n--comment", 0);
-        assertEquals(Arrays.asList("select", "1;"), delimited.words());
+        assertEquals(List.of("select", "1;"), delimited.words());
 
         delimited = parser.parse("select '1'\n;\n--comment", 0);
-        assertEquals(Arrays.asList("select", "1", ";"), delimited.words());
+        assertEquals(List.of("select", "1", ";"), delimited.words());
 
         delimited = parser.parse("select '1'\n\n;--comment", 0);
-        assertEquals(Arrays.asList("select", "1", ";"), delimited.words());
+        assertEquals(List.of("select", "1", ";"), delimited.words());
 
         delimited = parser.parse("select '1'\n\n;---comment", 0);
-        assertEquals(Arrays.asList("select", "1", ";"), delimited.words());
+        assertEquals(List.of("select", "1", ";"), delimited.words());
 
         delimited = parser.parse("select '1'\n\n;-- --comment", 0);
-        assertEquals(Arrays.asList("select", "1", ";"), delimited.words());
+        assertEquals(List.of("select", "1", ";"), delimited.words());
 
         delimited = parser.parse("select '1'\n\n;\n--comment", 0);
-        assertEquals(Arrays.asList("select", "1", ";"), delimited.words());
+        assertEquals(List.of("select", "1", ";"), delimited.words());
 
         delimited = parser.parse("select '1'/*comment*/", 0);
-        assertEquals(Arrays.asList("select", "1"), delimited.words());
+        assertEquals(List.of("select", "1"), delimited.words());
 
         delimited = parser.parse("select '1';/*---comment */", 0);
-        assertEquals(Arrays.asList("select", "1;"), delimited.words());
+        assertEquals(List.of("select", "1;"), delimited.words());
 
         delimited = parser.parse("select '1';/*comment\n*/\n", 0);
-        assertEquals(Arrays.asList("select", "1;"), delimited.words());
+        assertEquals(List.of("select", "1;"), delimited.words());
 
         delimited = parser.parse("select '1';/*comment*/\n\n", 0);
-        assertEquals(Arrays.asList("select", "1;"), delimited.words());
+        assertEquals(List.of("select", "1;"), delimited.words());
 
         delimited = parser.parse("select '1'; /*--comment*/", 0);
-        assertEquals(Arrays.asList("select", "1;"), delimited.words());
+        assertEquals(List.of("select", "1;"), delimited.words());
 
         delimited = parser.parse("select '1/*' as \"asd\";", 0);
-        assertEquals(Arrays.asList("select", "1/*", "as", "asd;"), delimited.words());
+        assertEquals(List.of("select", "1/*", "as", "asd;"), delimited.words());
 
         delimited = parser.parse("select '/*' as \"asd*/\";", 0);
-        assertEquals(Arrays.asList("select", "/*", "as", "asd*/;"), delimited.words());
+        assertEquals(List.of("select", "/*", "as", "asd*/;"), delimited.words());
 
         delimited = parser.parse("select '1' as \"'a'\\\ns'd\\\n\n\" from t;", 0);
-        assertEquals(Arrays.asList("select", "1", "as", "'a'\ns'd\n\n", "from", "t;"), delimited.words());
+        assertEquals(List.of("select", "1", "as", "'a'\ns'd\n\n", "from", "t;"), delimited.words());
     }
 
     @Test
-    public void testTrailingSpace() {
+    void testTrailingSpace() {
         // Issue #1489: trailing space should not emit an empty word in non-COMPLETE contexts
         delimited = parser.parse("echo foo bar ", 0);
-        assertEquals(Arrays.asList("echo", "foo", "bar"), delimited.words());
+        assertEquals(List.of("echo", "foo", "bar"), delimited.words());
 
         delimited = parser.parse("echo foo bar ", "echo foo bar ".length());
-        assertEquals(Arrays.asList("echo", "foo", "bar"), delimited.words());
+        assertEquals(List.of("echo", "foo", "bar"), delimited.words());
 
         // In COMPLETE context, trailing space should emit an empty word for tab-completion
         delimited = parser.parse("echo foo bar ", "echo foo bar ".length(), ParseContext.COMPLETE);
-        assertEquals(Arrays.asList("echo", "foo", "bar", ""), delimited.words());
+        assertEquals(List.of("echo", "foo", "bar", ""), delimited.words());
         assertEquals(3, delimited.wordIndex());
         assertEquals(0, delimited.wordCursor());
 
         // Explicit empty quoted string should always be preserved
         delimited = parser.parse("echo foo bar \"\"", "echo foo bar \"\"".length());
-        assertEquals(Arrays.asList("echo", "foo", "bar", ""), delimited.words());
+        assertEquals(List.of("echo", "foo", "bar", ""), delimited.words());
 
         // Empty quoted string in the middle should also be preserved
         delimited = parser.parse("echo \"\" bar", 0);
-        assertEquals(Arrays.asList("echo", "", "bar"), delimited.words());
+        assertEquals(List.of("echo", "", "bar"), delimited.words());
 
         // Multiple trailing spaces should not emit empty word
         delimited = parser.parse("echo foo   ", "echo foo   ".length());
-        assertEquals(Arrays.asList("echo", "foo"), delimited.words());
+        assertEquals(List.of("echo", "foo"), delimited.words());
     }
 
     @Test
-    public void testMissingOpeningBlockComment() {
+    void testMissingOpeningBlockComment() {
         parser.setBlockCommentDelims(new DefaultParser.BlockCommentDelims("/*", "*/"));
         assertThrows(EOFError.class, () -> parser.parse("1, 2, 3 */", 0));
     }
